# libnsh

./: .gitignore  ChangeLog.md  Makefile.am  README.md  configure.ac  libnsh.pc.in
.github/workflows/: build.yml  release.yml
doc/: HACKING.md
src/: Makefile.am  table.c  table.h
test/: .gitignore  Makefile.am
